--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.83.1",
+    "@react-native-community/blur": "^4.4.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-filament": "^1.9.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "^15.15.3",
     "react-native-worklets-core": "^1.6.3"
